--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
           <p class="homepage-white">q: <%= v.question.the_question %> </p>
         </div>
         <br />
-         <%= link_to 'View All Answers', question_path(v.question.id), method: :get, :class => 'btn btn-primary center-block' %>
+         <%= link_to 'View All The Answers', question_path(v.question.id), method: :get, :class => 'btn btn-primary center-block' %>
           
       <% end %>
     </div>
