--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,3 +1,7 @@
+<!-- web -->   
+<!-- <script src="https://www.webrtc-experiment.com/RecordRTC.js"> </script>  -->    
+<!-- include tag - dev looks in assets/production in public -->    
+<%#= javascript_include_tag "RecordRTC", "data-turbolinks-track" => true %>    
 
 <div class='container'>
   <div class='row'>
@@ -28,7 +32,8 @@
     </div>
   </div>
 </div>
-
+<%#= javascript_include_tag "RecordRTC" %>   
+<%#= javascript_include_tag "mediaRecorder" %>
 <script>window.onload=function(){mediaRecorder()}</script>
 
 
